Add copyright message at bottom with information to file bugs.

--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
 		<h4 id="base_url"></h4>
 		<div id="container" style="width:450px;">
 		</div>
-		<input type="button" id="btnUpdateUrl" value="Update"/>		
+		<input type="button" id="btnUpdateUrl" value="Update"/>	
+		<p>Copyright &copy; 2012 Amit Nithian. Please <a href="https://github.com/ANithian/url_edit_extension/issues">report</a> issues using Github.</p>	
 	</body>
 </html>
