Can't have a link in the popup.. so simply placing link so users can copy/paste.

--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,6 @@
 		<div id="container" style="width:450px;">
 		</div>
 		<input type="button" id="btnUpdateUrl" value="Update"/>	
-		<p>Copyright &copy; 2012 Amit Nithian. Please <a href="https://github.com/ANithian/url_edit_extension/issues">report</a> issues using Github.</p>	
+		<p>Copyright &copy; 2012 Amit Nithian. Please report issues using Github (https://github.com/ANithian/url_edit_extension/issues).</p>	
 	</body>
 </html>
