--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,8 @@
 	</head>
 	<body>
 		<h1>URL Editor</h1>
+		<p>Double click on a cell (either the parameter or its value) to change its value. When done, simply click the "Update" button
+		to see the changes reflected in the current tab.</p>
 		<h4 id="base_url"></h4>
 		<div id="container" style="width:450px;">
 		</div>
