Trying to see if this will fix the flickering issue by forcing a width/height of the container div.

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
 
 		<script src="jquery-1.7.2.js"></script>
 		<script src="jsuri-1.1.1.js"></script>
+		<script src="url_parser.js"></script>
 		<script src="jquery.dataTables.js"></script>
 		<script src="jquery.jeditable.js"></script>
 		<script src="jquery.dataTables.editable.js"></script>
@@ -18,7 +19,7 @@
 		<p>Double click on a cell (either the parameter or its value) to change its value. When done, simply click the "Update" button
 		to see the changes reflected in the current tab.</p>
 		<h4 id="base_url"></h4>
-		<div id="container" style="width:450px;">
+		<div id="container" style="width:450px;height:300px;">
 		</div>
 		<input type="button" id="btnUpdateUrl" value="Update"/>	
 		<p>Copyright &copy; 2012 Amit Nithian. Please report issues using Github (https://github.com/ANithian/url_edit_extension/issues).</p>	
